<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/login_title" >

    <TextView
        android:id="@+id/tv_title_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="14dp"
        android:text="@string/login_cancel"
        android:textColor="@color/login_textcolor"
        android:textSize="14sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/iv_xiaoxi"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:src="@drawable/iconfont_xiaoxi" />

    <ImageView
        android:id="@+id/iv_gouwuche"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="12dp"
        android:src="@drawable/icon_gouwuche" />

    <TextView
        android:id="@+id/tv_title_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/register"
        android:textColor="@color/login_textcolor"
        android:textSize="16sp" />

    <EditText
        android:visibility="gone"
        android:id="@+id/ed_include"
        android:paddingLeft="10dp"
        android:layout_centerInParent="true"
        android:hint="@string/mall_interesting"
        android:textSize="14sp"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:background="@drawable/mall_search_edittext_selector"
        android:drawableLeft="@drawable/icon_sousuo" />

    <TextView
        android:id="@+id/tv_register_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="14dp"
        android:text="@string/register_done"
        android:textColor="@color/login_textcolor"
        android:textSize="14sp"
        android:visibility="gone" />

</RelativeLayout>