<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/include_register"
        layout="@layout/include_title" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_phone" />

        <EditText
            android:id="@+id/et_register_phonenomber"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/edittext_style_fangkuang"
            android:hint="@string/hint_phone"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/et_register_msg"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:background="@drawable/edittext_style_fangkuang"
                android:hint="请输入收到的短信验证码"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_register_getMsg"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:background="#f3f4da"
                    android:text="获取短信验证码"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_register_msgAgian"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:background="#f3f4da"
                    android:text="重新获取"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="密码：" />
        </RelativeLayout>

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/edittext_style_fangkuang"
            android:hint="@string/hint_password"
            android:maxLength="20"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_length"
            android:textColor="@color/register_textcolor" />

        <Button
            android:id="@+id/btn_register_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@color/login_title"
            android:text="@string/register_next"
            android:textColor="@color/login_textcolor" />
    </LinearLayout>

</LinearLayout>