<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/include_huishou"
        layout="@layout/include_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/bg" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9116"
                        android:textColor="@color/huishou_member"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/huishou_menber"
                        android:textColor="@color/login_textcolor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="60dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/huishou_dianchi"
                        android:textColor="@color/login_textcolor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="80dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/huishou_total_money"
                        android:textColor="@color/login_textcolor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="100dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/huishou_greenarea"
                        android:textColor="@color/login_textcolor" />
                </LinearLayout>
            </RelativeLayout>

            <include layout="@layout/include_thick_grayline" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg2"
                    android:text="@string/huishou_batteryInfo" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="65dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:src="@drawable/iconfont_dingwei" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:text="深圳-宝安"
                        android:textColor="@color/register_textcolor"
                        android:textSize="14sp" />
                </RelativeLayout>
            </RelativeLayout>

            <include layout="@layout/include_thin_grayline" />

            <com.baicai.batteryrecycling.view.ScrollDisabledListView
                android:id="@+id/lv_shouye"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </com.baicai.batteryrecycling.view.ScrollDisabledListView>

            <include layout="@layout/include_thin_grayline" />

            <RelativeLayout
                android:id="@+id/rl_loadmore"
                android:layout_width="match_parent"
                android:layout_height="30dp" >

                <TextView
                    android:id="@+id/tv_huishou_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="查看更多电池规格"
                    android:textColor="@color/huishou_member" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@id/tv_huishou_more"
                    android:src="@drawable/iconfont_xiala" />
            </RelativeLayout>

            <include layout="@layout/include_thin_grayline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="预计总回收价："
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="随机获得1~20环保币，环保币在环保商城购物1:1抵扣现金"
                android:textSize="12sp" />

            <include layout="@layout/include_thick_grayline" />

            <Button
                android:id="@+id/btn_fabu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/login_title"
                android:text="发布出去"
                android:textColor="@color/login_textcolor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/huishou_shuoming"
                android:textColor="@color/register_textcolor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/huishou_message1"
                android:textColor="@color/register_textcolor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/huishou_message2"
                android:textColor="@color/register_textcolor" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>